[package]
name = "orai-v3-pool"
version = "0.1.0"
authors = ["nhatbui97 <bhnhat1234@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
alloy-primitives = "0.7.2"
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0"}
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
cw20 = "1.1.1"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
# uniswap-v3-sdk = {version = "0.29.2", optional = false}
utils = { path = "./packages/utils", default-features = false }
ruint = "1.12.1"
cw721 = "0.18.0"
getrandom = {version = "0.2", default-features = false, features = ["js"]}

[dev-dependencies]