[package]
name = "orai-v3-pool"
version = "0.1.0"
authors = ["nhatbui97 <bhnhat1234@gmail.com>"]
edition = "2021"
resolver = '2'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-std = { version = "=1.2" }
cosmwasm-schema = { version = "=1.2" }
cosmwasm-storage = { version = "=1.2" }

cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
cw721 = "0.18.0"
uint = "0.9.3"

[dev-dependencies]
quickcheck = "0.9"
proptest = "1.0"
