[package]
name = "oraiswap-v3-wasm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
tsify = "0.4.5"
paste = "1.0.14"
js-sys = "0.3.66"

decimal = { workspace = true }
traceable_result = { path = "./traceable_result" }
