[package]
name = "oraiswap-v3"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-storage = { workspace = true }

cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
decimal = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
cw20-base = { workspace = true, features = ["library"] }
